chore(create-onelib): add CLI dependencies

--- a/packages/create-onelib/package.json
+++ b/packages/create-onelib/package.json
@@ -17,6 +17,13 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"devDependencies": {
+		"@types/fs-extra": "^11.0.4",
 		"typescript": "^5.8.0"
+	},
+	"dependencies": {
+		"@clack/prompts": "^1.0.1",
+		"@onelib/templates": "workspace:*",
+		"fs-extra": "^11.3.3",
+		"picocolors": "^1.1.1"
 	}
 }
