fix: exclude packages/templates from Biome to prevent nested config error

--- a/biome.json
+++ b/biome.json
@@ -41,6 +41,14 @@
 		}
 	},
 	"files": {
-		"includes": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "**/*.json", "**/*.css"]
+		"includes": [
+			"**/*.ts",
+			"**/*.tsx",
+			"**/*.js",
+			"**/*.jsx",
+			"**/*.json",
+			"**/*.css",
+			"!packages/templates"
+		]
 	}
 }
