--- a/tooling/scripts/package.json
+++ b/tooling/scripts/package.json
@@ -1,10 +1,19 @@
 {
 	"name": "@onelib/scripts",
 	"version": "0.1.0",
-	"private": true,
-	"description": "Sync, registry, and skills utilities",
+	"description": "Onelib update pipeline and project scripts",
 	"type": "module",
 	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"bin": {
+		"onelib-scripts": "./dist/cli.js"
+	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"import": "./dist/index.js"
+		}
+	},
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --watch",
@@ -13,6 +22,10 @@
 		"check-types": "tsc --noEmit",
 		"test": "vitest run",
 		"clean": "rm -rf dist .turbo node_modules"
+	},
+	"dependencies": {
+		"@onelib/skills": "workspace:*",
+		"picocolors": "^1.1.1"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.0"
