feat(scripts): add config loader for onelib.config.ts

--- a/tooling/scripts/package.json
+++ b/tooling/scripts/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@onelib/skills": "workspace:*",
+		"onelib": "workspace:*",
 		"picocolors": "^1.1.1"
 	},
 	"devDependencies": {
