--- a/packages/templates/base/package.json.template
+++ b/packages/templates/base/package.json.template
@@ -8,7 +8,9 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "biome check .",
-		"format": "biome check --write ."
+		"format": "biome check --write .",
+		"onelib:update": "onelib-scripts update",
+		"onelib:skills:update": "onelib-scripts skills:update"
 	},
 	"dependencies": {
 		"next": "^15.3.0",
@@ -27,6 +29,7 @@
 		"postcss": "^8.5.0",
 		"eslint": "^9.0.0",
 		"eslint-config-next": "^15.3.0",
-		"prettier": "^3.5.0"
+		"prettier": "^3.5.0",
+		"@onelib/scripts": "^0.1.0"
 	}
 }
