--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,7 +22,8 @@
 		"clean": "rm -rf dist .turbo node_modules"
 	},
 	"dependencies": {
-		"@onelib/registry": "workspace:*"
+		"@onelib/registry": "workspace:*",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.0"
