--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -2,8 +2,9 @@
 	"extends": "../../packages/config/tsconfig.library.json",
 	"compilerOptions": {
 		"outDir": "./dist",
-		"rootDir": "./src"
+		"rootDir": "./src",
+		"jsx": "react-jsx"
 	},
 	"include": ["src"],
-	"exclude": ["src/**/__tests__"]
+	"exclude": ["src/**/__tests__", "src/buttons", "src/backgrounds", "src/text-animations"]
 }
