--- a/packages/create-onelib/package.json
+++ b/packages/create-onelib/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@clack/prompts": "^1.0.1",
+		"@onelib/components": "workspace:*",
 		"@onelib/skills": "workspace:*",
 		"@onelib/templates": "workspace:*",
 		"fs-extra": "^11.3.3",
