feat(components): port 8 real components from Sera UI and ReactBits
Replace 3 placeholder stubs (basic-button, aurora, fuzzy-text) with real
implementations and add 5 new components (shimmer-button, silk, decrypting-text,
marquee, dome-gallery).

Components ported:
- basic-button: Button with variants, ripple effect, loading state (Sera UI)
- shimmer-button: Conic-gradient animated border button (Sera UI)
- aurora: WebGL aurora borealis background using OGL (ReactBits)
- silk: Three.js shader-based silk fabric background (ReactBits)
- fuzzy-text: Canvas-based glitch text with hover effect (Sera UI)
- decrypting-text: Character scramble reveal animation (Sera UI)
- marquee: Infinite scroll with pause-on-hover (Sera UI)
- dome-gallery: 3D spherical image gallery with drag navigation (ReactBits)

Also excludes ported component source dirs from Biome linting to preserve
upstream code fidelity.

--- a/biome.json
+++ b/biome.json
@@ -48,7 +48,13 @@
 			"**/*.jsx",
 			"**/*.json",
 			"**/*.css",
-			"!packages/templates"
+			"!packages/templates",
+			"!packages/components/src/buttons",
+			"!packages/components/src/backgrounds",
+			"!packages/components/src/text-animations",
+			"!packages/components/src/sections",
+			"!packages/components/src/gallery",
+			"!packages/components/src/lib"
 		]
 	}
 }
