--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -10,24 +10,25 @@
 		"clean": "rm -rf storybook-static .turbo node_modules"
 	},
 	"dependencies": {
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
+		"@react-three/fiber": "^9.1.2",
+		"@use-gesture/react": "^10.3.1",
 		"clsx": "^2.1.1",
-		"tailwind-merge": "^3.3.0",
 		"motion": "^12.12.1",
 		"ogl": "^1.0.11",
-		"three": "^0.175.0",
-		"@react-three/fiber": "^9.1.2",
-		"@use-gesture/react": "^10.3.1"
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.0",
+		"three": "^0.175.0"
 	},
 	"devDependencies": {
-		"storybook": "^10.0.0",
-		"@storybook/react-vite": "^10.0.0",
+		"@storybook/addon-docs": "^10.2.10",
 		"@storybook/addon-themes": "^10.0.0",
+		"@storybook/react-vite": "^10.0.0",
+		"@tailwindcss/vite": "^4.1.0",
 		"@types/react": "^19.1.0",
 		"@types/react-dom": "^19.1.0",
+		"storybook": "^10.0.0",
 		"tailwindcss": "^4.1.0",
-		"@tailwindcss/vite": "^4.1.0",
 		"typescript": "^5.9.3"
 	}
 }
