fix: resolve critical update pipeline issues
- Add missing dependencies (@onelib/components, @onelib/skills, picocolors) to project template
- Fix path resolution bug in components-update.ts that caused double node_modules path
- Use import.meta.resolve for proper package location detection (works with symlinks and installed packages)
- Add fallback for older Node versions

--- a/packages/templates/base/package.json.template
+++ b/packages/templates/base/package.json.template
@@ -17,9 +17,12 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"onelib": "^0.1.0",
+		"@onelib/components": "^0.1.0",
+		"@onelib/skills": "^0.1.0",
 		"clsx": "^2.1.0",
 		"tailwind-merge": "^3.0.0",
-		"motion": "^11.0.0"
+		"motion": "^11.0.0",
+		"picocolors": "^1.1.1"
 	},
 	"devDependencies": {
 		"@types/node": "^24.0.0",
