feat: scope all packages under @banavasi and configure GitHub Packages registry
- Rename all packages from @onelib/* to @banavasi/* to resolve npm E403 naming conflict
- Add publishConfig pointing to npm.pkg.github.com for all publishable packages
- Update all cross-references, imports, and workspace dependencies
- Add .npmrc for GitHub Packages scope routing
- Add GitHub Actions publish workflow (triggers on v* tags)
- Update scaffold template to use @banavasi/* packages with .npmrc

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@onelib/components",
+	"name": "@banavasi/components",
 	"version": "0.1.0",
 	"description": "Curated component library for Onelib projects",
 	"type": "module",
@@ -21,8 +21,11 @@
 		"test": "vitest run",
 		"clean": "rm -rf dist .turbo node_modules"
 	},
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com"
+	},
 	"dependencies": {
-		"@onelib/registry": "workspace:*",
+		"@banavasi/registry": "workspace:*",
 		"zod": "^4.3.6"
 	},
 	"devDependencies": {
