--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@onelib/config",
+	"name": "@banavasi/config",
 	"version": "0.1.0",
 	"private": true,
 	"description": "Shared configs (biome, typescript, etc.)",
