--- a/packages/layouts/package.json
+++ b/packages/layouts/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@onelib/layouts",
+	"name": "@banavasi/layouts",
 	"version": "0.1.0",
 	"description": "Layout and page templates",
 	"type": "module",
@@ -19,6 +19,9 @@
 		"check-types": "tsc --noEmit",
 		"test": "vitest run",
 		"clean": "rm -rf dist .turbo node_modules"
+	},
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com"
 	},
 	"devDependencies": {
 		"typescript": "^5.8.0"
