--- a/packages/templates/package.json
+++ b/packages/templates/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@onelib/templates",
+	"name": "@banavasi/templates",
 	"version": "0.1.0",
 	"private": true,
 	"description": "Base Next.js template for generated projects",
