fix: publish @banavasi/templates and bump all packages to v0.1.1
- Remove private:true from templates package so it's available on GitHub Packages
- Add publishConfig and files field to templates package.json
- Add @banavasi/templates publish step to GitHub Actions workflow
- Bump all package versions to 0.1.1

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -58,6 +58,11 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Publish @banavasi/templates
+        run: pnpm --filter @banavasi/templates publish --no-git-checks --access restricted
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish @banavasi/onelib
         run: pnpm --filter @banavasi/onelib publish --no-git-checks --access restricted
         env:
